<!-- res/layout/fragment_users_search.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background4"
    tools:context=".Fragments.UsersSearch"
    >

    <!-- Search input with TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Search users"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_search"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/edit_text_background"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Search button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        app:layout_constraintTop_toBottomOf="@+id/search_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/games_genres"
        android:layout_marginTop="16dp" />

    <!-- TextView for game genres -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/games_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_genres"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/applegreen"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Checkboxes for game genres -->
    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/games_genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rpg"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="13dp"
            android:layout_height="wrap_content"
            android:text="@string/adventure"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fighting"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <!-- Second row of checkboxes -->
    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/firstRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/puzzle"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/survival"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/racing"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/strategy"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <!-- TextView for platforms -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/platforms"
        android:padding="16dp"
        android:textSize="18sp"
        android:textColor="@color/applegreen"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/secondRow"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Checkboxes for platforms -->
    <LinearLayout
        android:id="@+id/fourthRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/platform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkboxPlatform1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pc"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkboxPlatform2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/console"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <CheckBox
            android:id="@+id/checkboxPlatform3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:layout_weight="1"
            android:textColor="@color/Burlywood"
            android:textSize="14sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
