<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CommunityActivity"
    android:background="@drawable/background10">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/textCommunity" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_addGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_group"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_addGroup"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="110dp"
        android:background="@android:color/white"
        android:hint="@string/enter_your_group_name_here"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TouchTargetSizeCheck" />

    <MultiAutoCompleteTextView
        android:id="@+id/textCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/community_groups"
        android:textColor="@color/Azure"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>
