<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:background="@drawable/background1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:textColor="@color/applegreen"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_moveToPhoneRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_register_login"
            android:textSize="18sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginNow"
            android:text="@string/click_to_login"
            android:textSize="20sp"
            android:textColor="@color/Darkred"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher_gg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />



</RelativeLayout>
